--- a/views/gallery.phtml
+++ b/views/gallery.phtml
@@ -1,4 +1,4 @@
-<? if (!isset($galleryId) || empty($galleryId)) $galleryId = 341782652670884 ?>	
+<? if (!isset($galleryId) || empty($galleryId)) $galleryId = 970930916321155 ?>	
 <?= ViewLoader::load('breadcrumb', array('items' => $breadcrumb)) ?>
 <div class="container">
     <div class="hero-unit">
@@ -6,9 +6,9 @@
         <p style="font-weight: bold; margin-bottom: 20px;">
         	<a data-method="async" href="/pics/341782652670884">Wings of Garuda</a>
         	|
-        	<a data-method="async" href="/pics/333230870192729">Mahadeva Linga</a>
+        	<a data-method="async" href="/pics/333230870192729">Mahadeva Linga #2</a>
         	|
-        	<a data-method="async"href="/pics/283757605140056">3886 in Love</a>
+        	<a data-method="async"href="/pics/283757605140056">3886 in Love #2</a>
         	|
         	<a data-method="async" href="/pics/279147742267709">Herrnesium</a>
         	|
@@ -16,10 +16,47 @@
         	|
         	<a data-method="async" href="/pics/262385800610570">Lustig Stampfen</a>
         	|
-        	<a data-method="async" href="/pics/209551022560715">Labelnight</a>
+        	<a data-method="async" href="/pics/209551022560715">Labelnight #1</a>
+            |
+            <a data-method="async" href="/pics/930923503657621">Psy Force</a>
+            |
+            <a data-method="async" href="/pics/1041656835901540">Carnegoa 4</a>
+            |
+            <a data-method="async" href="/pics/155951811243085">Bonn Goa B-Day 3</a>
+            |
+            <a data-method="async" href="/pics/970930916321155">Bonn Goa B-Day 4</a>
+            |
+            <a data-method="async" href="/pics/960073924073521">Psyday Friday</a>
+            |
+            <a data-method="async" href="/pics/944940868920160">Friday 13th</a>
+            |
+            <a data-method="async" href="/pics/592846724129578">Aquarius</a>
+            |
+            <a data-method="async" href="/pics/622738071140443">Spring Night</a>
+            |
+            <a data-method="async" href="/pics/394671027382046">Progstreet</a>
+            |
+            <a data-method="async" href="/pics/382443045271511">Psystreet</a>
+            |
+            <a data-method="async" href="/pics/375430595972756">Psy Forge 2</a>
+            |
+            <a data-method="async" href="/pics/353924654790017">Brahma Quinio</a>
+            |
+            <a data-method="async" href="/pics/283757605140056">3886 in Love</a>
+            |
+            <a data-method="async" href="/pics/333230870192729">Mahadeva Linga</a>
+
+
+            
+
+
+            
+
+
+            
         </p>
 		<div class="span12" id="photos"></div>
-		<iframe src="http://embedsocial.com/facebook_album/album_photos/<?= $galleryId ?>" width="100%" height="1450" frameborder="0" scrolling="no" marginheight="0"  marginwidth="0"></iframe>
+		<iframe src="//embedsocial.com/facebook_album/album_photos/<?= $galleryId ?>" width="100%" height="1450" frameborder="0" scrolling="no" marginheight="0"  marginwidth="0"></iframe>
 	</div>
 </div>
 		
