--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -31,6 +31,7 @@
 <link href="/css/ui/jquery-ui-1.10.3.custom.css" rel="stylesheet">
 <link type="text/css" href="/css/skitter.styles.css" media="all" rel="stylesheet" />
 <link type="text/css" rel='stylesheet' href='/css/fullcalendar.min.css' />
+<link rel="stylesheet" rel='stylesheet' href="/css/jquery-ui-timepicker-addon.css">
 <!--[if IE 7]>
     <link rel="stylesheet" href="/css/font-awesome-ie7.min.css">
     <![endif]-->
@@ -106,6 +107,7 @@
 <script src="/js/jquery.skitter.min.js"></script>
 <script src='/js/moment.js'></script>
 <script src='/js/fullcalendar.min.js'></script>
+<script src="/js/jquery-ui-timepicker-addon.js"></script>
 <script>    
      jQuery(window).load(function() { 
         jQuery('.spinner').animate({'opacity':0},500,'easeOutCubic',function (){jQuery(this).css('display','none')});  
